changes for this fork

--- a/index.html
+++ b/index.html
@@ -3,24 +3,22 @@
     <title ng-bind="(title ? title + ' // ' : '') + 'TL-Schema Explorer'">TL-Schema Explorer</title>
 
     <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css?v14">
-    <link rel="stylesheet" href="/css/fonts.css">
-    <link rel="stylesheet" href="/css/rgs.css">
-    <link rel="stylesheet" href="/css/vs2015.css">
-    <link rel="shortcut icon" href="/img/telegram-circle.png">
+    <link rel="stylesheet" href="./css/styles.css?v14">
+    <link rel="stylesheet" href="./css/fonts.css">
+    <link rel="stylesheet" href="./css/rgs.css">
+    <link rel="stylesheet" href="./css/vs2015.css">
+    <link rel="shortcut icon" href="./img/telegram-circle.png">
 
-    <script src="/js/schema.js?v4"></script>
-    <script src="/js/showdown.min.js"></script>
-    <script src="/js/angular.min.js"></script>
-    <script src="/js/ngsanitize.min.js"></script>
-    <script src="/js/ngroute.min.js"></script>
-    <script src="/js/ngmarkdown.js"></script>
-    <script src="/js/highlight.min.js"></script>
-    <script src="/js/nghighlight.min.js"></script>
-    <script src="/js/app.js?v11"></script>
+    <script src="./js/schema.js?v4"></script>
+    <script src="./js/showdown.min.js"></script>
+    <script src="./js/angular.min.js"></script>
+    <script src="./js/ngsanitize.min.js"></script>
+    <script src="./js/ngroute.min.js"></script>
+    <script src="./js/ngmarkdown.js"></script>
+    <script src="./js/highlight.min.js"></script>
+    <script src="./js/nghighlight.min.js"></script>
+    <script src="./js/app.js?v11"></script>
 
-    <script async defer data-website-id="74493f73-a9f7-4bb8-80e9-c2d8c00e1abe" src="https://umami.horner.tj/umami.js"></script>
-    
     <meta property="og:title" content="TL-Schema Explorer">
     <meta property="og:site_name" content="TL-Schema Explorer">
     <meta property="og:type" content="website">
@@ -30,11 +28,11 @@
   <body>
     <header>
       <div class="header-inner">
-        <a href="#!/" class="home">TL-Schema Explorer (Layer 158)</a>
+        <a href="#!/" class="home">TL-Schema Explorer (Layer 181)</a>
 
         <div class="header-right">
-          <a href="/resources/schema.json" class="ic-download">schema.json</a>
-          <a href="/resources/schema.tl" class="ic-download">schema.tl</a>
+          <a href="./resources/schema.json" class="ic-download">schema.json</a>
+          <a href="./resources/schema.tl" class="ic-download">schema.tl</a>
           <input type="text" placeholder="Search..." ng-hide="hideGlobalSearch" class="header-search" ng-model="globalSearch" ng-change="doSearch()">
         </div>
       </div>
